# tsec

./: .gitignore  Cargo.toml  README.md  install.sh  menuchars.txt  sec.docx  sec1.txt  sec2.txt  toolsidearec25tasks.md
docs/: SEC_FRAMEWORK.docx  Sec_Framework.docx  TOOL_INSTALLATION.md  finaltsec.docx  toolsidearec25.md  tsec1.md
scripts/: generate_tools.py
src/: executor.rs  input.rs  logger.rs  main.rs  parser.rs
src/anonymity/: dns.rs  mod.rs  proxy.rs  sanitizer.rs  stealth.rs  tor.rs  wrapper.rs
src/config/: mod.rs  settings.rs
src/tools/: mod.rs  phase01_reconnaissance.rs  phase02_attack_surface.rs  phase03_vulnerability.rs  phase04_payload.rs  phase05_privesc.rs  phase06_credentials.rs  phase07_lateral.rs  phase08_persistence.rs  phase09_objectives.rs  phase10_wireless.rs  types.rs
src/ui/: menu.rs  menu.rs.patch  mod.rs  output.rs  output_viewer.rs  spinner.rs  theme.rs
